[package]
name = "babylon-finance"
version = "1.6.2"
authors = ["gadillac<lenin2732372@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.3", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
once_cell = "=1.8.0"

[dev-dependencies]
near-sdk-sim = "3.1.0"
test-token = { path = "../test-token" }
rand = "0.8"
rand_pcg = "0.3"